<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="107dp"
        android:layout_height="33dp"
        android:text="@string/sarah_alder"
        android:textSize="18dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="0dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="90dp"
        android:layout_height="71dp"
        android:orientation="horizontal"
        android:src="@drawable/logo2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/august_22_380055_7_43_pm"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="33dp" />

    <ImageView
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mount_marathon"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="71dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="874dp"
        android:layout_height="259dp"
        app:srcCompat="@drawable/mapa"
        tools:layout_editor_absoluteX="-232dp"
        tools:layout_editor_absoluteY="105dp"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/Tabla"
        android:layout_width="409dp"
        android:layout_height="231dp"
        android:gravity="center"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="354dp">

        <TableRow
            android:id="@+id/Cabecera"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ColumnaAnio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5px"
                android:text="@string/Distancia"

                android:textSize="18dp" />

            <TextView
                android:id="@+id/ColumnaCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center"
                android:padding="5px"
                android:text="@string/altitud_ganada"

                android:textSize="18dp" />


        </TableRow>

        <TableRow
            android:id="@+id/SeparadorCabecera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


        </TableRow>

        <TableRow
            android:id="@+id/Fila1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Anio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="1900"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Cuidad1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="1264 ms"
                android:textSize="35sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:id="@+id/Cabecera2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tiempo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5px"
                android:text="@string/tiempo_total"

                android:textSize="18dp" />

            <TextView
                android:id="@+id/avg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:padding="5px"
                android:text="@string/avg_power"

                android:textSize="18dp" />


        </TableRow>

        <TableRow
            android:id="@+id/SeparadorCabecera2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


        </TableRow>

        <TableRow
            android:id="@+id/Fila2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/_22_04"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/avg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/_319"
                android:textSize="35sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:id="@+id/Cabecera3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/avg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5px"
                android:text="@string/tiempo_total"

                android:textSize="18dp" />

            <TextView
                android:id="@+id/calories2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:padding="5px"
                android:text="@string/avg_power"

                android:textSize="18dp" />


        </TableRow>

        <TableRow
            android:id="@+id/SeparadorCabecera3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TableRow
            android:id="@+id/Fila3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/_11_0mi_h"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right"
                android:text="@string/_393"
                android:textSize="35dp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip4"
        android:layout_width="391dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/view_analysis"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:chipBackgroundColor="#FF5722"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="585dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hoka One One Torrent"
        android:textSize="16dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="632dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="28dp"
        android:layout_height="34dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="632dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="62dp"
        android:layout_height="46dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="671dp">


        <LinearLayout
            android:layout_width=""
            android:layout_height="" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="440dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo4" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="59dp"
        android:layout_height="57dp"
        app:srcCompat="@drawable/lupa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="661dp" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="61dp"
        android:layout_height="52dp"
        app:srcCompat="@drawable/inicio"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="665dp" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="67dp"
        android:layout_height="54dp"
        app:srcCompat="@drawable/summit"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="663dp" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="65dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/profile"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="658dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feed"
        tools:layout_editor_absoluteX="16dp"
        android:textColor="#FF5722"
        tools:layout_editor_absoluteY="714dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="714dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="714dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="714dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Summit"
        tools:layout_editor_absoluteX="347dp"
        tools:layout_editor_absoluteY="714dp"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>






